assets/style.css
:root {
  --mainColor: white;
  --secondaryColor: black;
  --popColor: #06aed5;
}

body {
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
  line-height: 1;
}

textarea {
  background: rgb(224, 224, 224);
  border: none;
  resize: none;
  color: var(--secondaryColor);
  border-left: 1px solid var(--secondaryColor);
  padding: 10px;
  margin-right: 2px;
  padding-left: 2px;
}

.jumbotron {
  text-align: center;
  color: var(--secondaryColor);
  border-radius: 0;
  border-bottom: 10px solid var(--secondaryColor);
  background-image: linear-gradient(var(--mainColor), var(--popColor));
}

.lead {
  color: var(--mainColor);
}

.description {
  white-space: pre-wrap;
}

.time-block {
  text-align: center;
  border-radius: 15px, 0px, 0px, 15px;
  display: flex;
  flex-direction: column;
  width: 800px;
}

.row {
  white-space: pre-wrap;
  height: 80px;
  border-top: 1px solid var(--mainColor);
}

.hour {
  background-color: var(--mainColor);
  color: var(--secondaryColor);
  border-top: 1px dashed var(--secondaryColor);
  padding: 10px;
  display: flex;
  align-items: center;
}

.past {
  background-color: #d3d3d3;
  color: var(--mainColor);
}

.present {
  background-color: #ff6961;
  color: var(--mainColor);
}

.future {
  background-color: #77dd77;
  color: var(--mainColor);
}

.saveBtn {
  border-left: 1px solid var(--secondaryColor);
  border-top-right-radius: 15px;
  border-bottom-right-radius: 15px;
  background-color: var(--popColor);
  color: var(--mainColor);
}

.saveBtn i:hover {
  font-size: 20px;
  transition: all 0.3s ease-in-out;
}

.hour-row {
  display: flex;
  flex-direction: row;
justify-content: center;
flex-direction: row;
}

#hour8, #hour9, #hour13, #hour14, #hour15, #hour16, #hour17 {
  padding-left: 10px;
}

#hour8, #hour9, #hour10, #hour11, #hour12, #hour13, #hour14, #hour15, #hour16, #hour17 {
  padding-bottom: 2px;
}

.hour10, .hour11, .hour12 {
  display: flex;
  align-items: center;
}

